# feed-AI-agentic-beast-proper-data-jun2026

./: README.md  pyproject.toml  requirements.txt
solutions/: workshop_solutions.ipynb
workshop/: presentation.pptx  workshop_materials.ipynb
